--- a/SASS/layout/_grid.sass
+++ b/SASS/layout/_grid.sass
@@ -1,6 +1,6 @@
 .row
     max-width: $grid-width
-    background: #c89393
+    //background: #c89393
     margin: 0 auto
 
     &:not(:last-child)
@@ -26,7 +26,7 @@
     width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) +  2 * #{$gutter-horizontal})
 
 [class^="col-"]
-    background: #6bbd8d
+    //background: #6bbd8d
     float: left
     &:not(:last-child)
         margin-right: $gutter-horizontal
