--- a/SASS/base/_typography.sass
+++ b/SASS/base/_typography.sass
@@ -1,7 +1,7 @@
 body
     font-family: "Roboto", sans-serif  
     color: $color-gray
-    font-size: 1.6rem
+    font-size: $font-size-paragraph
     letter-spacing: .2rem
     
 .title-first
@@ -25,9 +25,36 @@ body
         font-size: 4rem
         line-height: 4.8rem
         letter-spacing: .5rem
-        animation-name: rightToLeft
+        animation-name: RightToLeft
         animation-duration: 2s
         animation-delay: 2s
         animation-timing-function: ease
         backface-visibility: hidden
         margin-bottom: 5rem
+
+.title-secondary
+    text-align: center
+    font-size: $font-size-paragraph-h2
+    letter-spacing: 1rem
+    text-transform: uppercase 
+    font-weight: 800
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-brown-dark, 0.7) 99.94%)
+    -webkit-background-clip: text
+    color: transparent
+    transition: all .4s
+    &:hover
+        transform: skewY(2deg) skewX(15deg) scale(1.1)
+        text-shadow: 0 .4rem .4rem rgba($color-black, .25)
+
+
+.title-third
+    font-size: $font-size-paragraph-h3
+    letter-spacing: .2rem
+    text-transform: uppercase 
+    font-weight: 700
+
+.paragraph
+    font-size: $font-size-paragraph
+    letter-spacing: .2rem
+    line-height: 140%
+    font-weight: 400
