add two new section

--- a/SASS/base/_animation.sass
+++ b/SASS/base/_animation.sass
@@ -1,4 +1,4 @@
-       
+
 //Анимация которая поднимает кнопку на 5px наверх.
 @keyframes BtnToUp
     0%
@@ -7,7 +7,7 @@
     
     100%
         opacity: 1
-        transform: translateY(0)     
+        transform: translateY(0rem)
         
 
 //Анимация которая двигает текст слева направо.
@@ -34,5 +34,4 @@
     
     100%
         opacity: 1
-        transform: translateX(0)
-  
+        transform: translateX(0rem)
