--- a/SASS/base/_typography.sass
+++ b/SASS/base/_typography.sass
@@ -36,7 +36,7 @@ body
     text-align: center
     font-size: $font-size-paragraph-h2
     letter-spacing: 1rem
-    text-transform: uppercase 
+    text-transform: uppercase
     font-weight: 800
     background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-brown-dark, 0.7) 99.94%)
     -webkit-background-clip: text
@@ -45,6 +45,8 @@ body
     &:hover
         transform: skewY(2deg) skewX(15deg) scale(1.1)
         text-shadow: 0 .4rem .4rem rgba($color-black, .25)
+    &_white
+        color: $color-white
 
 
 .title-third
