--- a/SASS/pages/_home.sass
+++ b/SASS/pages/_home.sass
@@ -16,3 +16,7 @@
 .section-feedback
     padding: 8rem 0rem
     position: relative
+
+.section-book
+    padding: 10rem
+    background: linear-gradient(90deg, $color-brown-light, $color-brown-dark)
