add footer and change images

--- a/SASS/components/_composition.sass
+++ b/SASS/components/_composition.sass
@@ -3,20 +3,35 @@
     &__photo
         width: 55%
         box-shadow: $box-shadow
-        border-radius: .5rem
+        border-radius: 2rem
         position: absolute
         z-index: 10
         transition: all .2s
         outline-offset: 1rem
         &_n1
-            top: 20rem
-            left: 0rem
+            top: 17rem
+            left: -.5rem
         &_n2
-            top: 22rem
-            right: 0rem
+            top: 19rem
+            right: -3rem
         &_n3
-            top: 32rem
-            left: 10rem
+            top: 35rem
+            left: -5rem
+            z-index: 4
+        &_n4
+            top: 36rem
+            right: -16em
+            z-index: 5
+        &_n5
+            top: 36rem
+            left: 22rem
+        &_n6
+            top: 51rem
+            left: 32rem
+        &_n7
+            top: 52rem
+            left: 3rem
+            z-index: 3
         &:hover
             outline: 1rem solid $color-brown-light
             transform: scale(1.1)
