--- a/SASS/components/_form.sass
+++ b/SASS/components/_form.sass
@@ -1,6 +1,6 @@
 .book
     height: 50rem
-    background: linear-gradient(110deg, rgba(255,255,255,0.9) 0%, rgba(255,255,255,0.9) 57%, rgba(186,133,80,0.8) 57%, rgba(161,79,3,0.8) 100%), url(../img/merc.jpg) center / cover no-repeat
+    background: linear-gradient(110deg, rgba(255,255,255,0.9) 20%, rgba(255,255,255,0.9) 37%, rgba(186,133,80,0.8) 57%, rgba(161,79,3,0.8) 100%), url(../img/form.jpg) bottom right / cover no-repeat
     box-shadow: $box-shadow
     border-radius: .5rem
     overflow: hidden
@@ -24,7 +24,7 @@
         border: none
         border-bottom: .3rem solid transparent
         border-radius: .5rem
-        width: 70%
+        width: 65%
         &:focus
             outline: none
             border-bottom: .3rem solid #66D763
