--- a/SASS/components/_tour-card.sass
+++ b/SASS/components/_tour-card.sass
@@ -31,15 +31,15 @@
         transform: rotateY(0deg)
 
     &__img
-        background-blend-mode: luminosity
+        background-blend-mode: hard-light
         height: 21rem
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
         &_1
-            background: $color-brown-light url(../img/ferrari.jpg) center / cover no-repeat
+            background: $color-brown-light url(../img/comaro.jpg) center / cover no-repeat
         &_2
-            background: $color-brown-light url(../img/ferrari.jpg) center / cover no-repeat
+            background: $color-brown-light url(../img/yellow.jpg) center / cover no-repeat
         &_3
-            background: $color-brown-light url(../img/ferrari.jpg) center / cover no-repeat
+            background: $color-brown-light url(../img/hotmercedes.jpg) center / cover no-repeat
     &__title
         font-size: 2.8rem
         letter-spacing: .2rem
@@ -47,7 +47,7 @@
         text-transform: uppercase
         text-align: right
         position: absolute
-        top: 17rem
+        top: 19rem
         right: 0rem
     &__span
         background: linear-gradient(90deg, $color-brown-light, $color-brown-dark)
