--- a/SASS/base/_typography.sass
+++ b/SASS/base/_typography.sass
@@ -30,6 +30,19 @@ body
         animation-delay: 2s
         animation-timing-function: ease
         backface-visibility: hidden
+        margin-bottom: 1rem
+
+    &__third
+        display: block
+        font-weight: 400
+        font-size: 4rem
+        line-height: 4.8rem
+        letter-spacing: .5rem
+        animation-name: leftToRight
+        animation-duration: 2s
+        animation-delay: 2s
+        animation-timing-function: ease
+        backface-visibility: hidden
         margin-bottom: 5rem
 
 .title-secondary
@@ -43,7 +56,7 @@ body
     color: transparent
     transition: all .4s
     &:hover
-        transform: skewY(2deg) skewX(15deg) scale(1.1)
+        transform: scale(1.1)
         text-shadow: 0 .4rem .4rem rgba($color-black, .25)
     &_white
         color: $color-white
