--- a/SASS/layout/_header.sass
+++ b/SASS/layout/_header.sass
@@ -1,13 +1,14 @@
 .header
     position: relative
     height: 95vh
-    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-brown-dark, 0.7) 99.94%), url(../img/six.jpg) center / cover no-repeat
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-black, 0.7) 99.94%), url(../img/six.jpg) center / cover no-repeat
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
     &__logo
         position: absolute
         left: 5rem
         top: 5rem
         height: 15rem
+        width: 22rem
     &__box
         position: absolute
         top: 40%
