--- a/SASS/pages/_home.sass
+++ b/SASS/pages/_home.sass
@@ -3,8 +3,8 @@
     margin-bottom: 20rem
     
 .section-adventure
-    padding: 41rem 0
-    background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-brown-dark, 0.7) 99.94%), url(../img/five.jpg) center / cover no-repeat
+    padding: 21rem 0
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-black, 0.7)), url(../img/row.jpg) bottom / cover no-repeat
     transform: skewY(7deg)
     & > *
         transform: skewY(-7deg)
