--- a/SASS/base/_animation.sass
+++ b/SASS/base/_animation.sass
@@ -35,3 +35,9 @@
     100%
         opacity: 1
         transform: translateX(0rem)
+
+@keyframes fadeIn
+    0%
+        opacity: 0
+    100%
+        opacity: 1
