--- a/SASS/base/_typography.sass
+++ b/SASS/base/_typography.sass
@@ -16,9 +16,11 @@ body
         margin-bottom: 1rem
         animation-name: leftToRight
         animation-duration: 2s
-        animation-delay: 2s
+        animation-delay: 0s
         animation-timing-function: ease
         backface-visibility: hidden
+        @include respond(tab-land)
+            font-size: 4rem
     &__secondary
         display: block
         font-weight: 400
@@ -26,11 +28,14 @@ body
         line-height: 4.8rem
         letter-spacing: .5rem
         animation-name: RightToLeft
-        animation-duration: 2s
-        animation-delay: 2s
+        animation-duration: 2.5s
+        animation-delay: 0s
         animation-timing-function: ease
         backface-visibility: hidden
         margin-bottom: 1rem
+        @include respond(tab-land)
+            font-size: 3.5rem
+            margin-bottom: 3.5rem
 
     &__third
         display: block
@@ -40,7 +45,7 @@ body
         letter-spacing: .5rem
         animation-name: leftToRight
         animation-duration: 2s
-        animation-delay: 2s
+        animation-delay: 0s
         animation-timing-function: ease
         backface-visibility: hidden
         margin-bottom: 5rem
@@ -55,6 +60,9 @@ body
     -webkit-background-clip: text
     color: transparent
     transition: all .4s
+    backface-visibility: hidden
+    @include respond(tab-land)
+        font-size: 3rem
     &:hover
         transform: scale(1.1)
         text-shadow: 0 .4rem .4rem rgba($color-black, .25)
@@ -67,9 +75,13 @@ body
     letter-spacing: .2rem
     text-transform: uppercase 
     font-weight: 700
+    @include respond(tab-land)
+        font-size: 1.8rem
 
 .paragraph
     font-size: $font-size-paragraph
     letter-spacing: .2rem
     line-height: 140%
     font-weight: 400
+    @include respond(tab-land)
+        font-size: 1.5rem
