--- a/SASS/components/_button.sass
+++ b/SASS/components/_button.sass
@@ -8,6 +8,9 @@
         position: relative
         font-size: 2rem
         border: none
+        @include respond(tab-land)
+            font-size: 1.8rem
+            padding: 1.2rem 3.7rem
 
     &:hover
         transform: translateY(-.4rem)
