--- a/SASS/layout/_header.sass
+++ b/SASS/layout/_header.sass
@@ -3,6 +3,7 @@
     height: 95vh
     background: linear-gradient(90deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-black, 0.7) 99.94%), url(../img/six.jpg) center / cover no-repeat
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
+    animation: fadeIn 1.5s ease
     &__logo
         position: absolute
         left: 5rem
@@ -16,3 +17,5 @@
         transform: translate(-50%, -50%)
         width: 100%
         text-align: center
+        @include respond(tab-land)
+        top: 50%
